Olympus/src/objects/HSFE_Zip_To_Territory__c.object
<CustomObject>
    <fields>
        <fullName>HSFE_Combination_Key__c</fullName>
        <externalId>true</externalId>
        <label>Combination Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HSFE_Rep_Type__c</fullName>
        <label>Rep Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSFE_Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Specialty__c</fullName>
        <label>Sub Specialty</label>
        <picklist>
            <controllingField>HSFE_Specialty__c</controllingField>
            <picklistValues>
                <fullName>Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology/Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndoCapsule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical AVI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>HSEF_Territory__c</referenceTo>
        <relationshipLabel>Zip To Territory</relationshipLabel>
        <relationshipName>Zip_To_Territory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Zip To Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSFE_Specialty__c</columns>
        <columns>HSFE_Sub_Specialty__c</columns>
        <columns>HSFE_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip To Territory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>